# raspi-DMXBox

./: README.md  config.json  config.py  create_virtual_com.sh  dmx.py  dmx_sender.py  main.py  osc_service.py  pyproject.toml  requirements.txt  rest_api.py  serial_port.py  setup.sh  tcp_server.py  util.py
static/: config.html  index.html
static/css/: raspi-dmxbox.css
static/js/: raspi-dmxbox.js
